--- a/index.html
+++ b/index.html
@@ -19,7 +19,12 @@
             <div class="hover">
                 <h1>Nueve Reinas</h1>
             </div>
-
+        </div>
+        <div class="seccion-1">
+            <img src="player one.jpg">
+            <div class="hover">
+                <h1>Ready Player One</h1>
+            </div>
         </div>
     </div>
     
